--- a/comp484-hw2-jgh/next.html
+++ b/comp484-hw2-jgh/next.html
@@ -68,8 +68,9 @@
     </section>
   </article>
 </main>
-<footer>
+<footer role = "contentinfo">
   <p><a href="http://www.csun.edu" title="csun.edu" target="_blank">CSUN</a> 18111 Nordhoff St Northridge, CA 91330</p>
 </footer>
 </body>
 </html>
+
